# hac-rs

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: junk.rs  main.rs  nsp.rs
crates/hac/: Cargo.toml
crates/hac/src/: brw_utils.rs  filesystem.rs  hexstring.rs  ids.rs  lib.rs  switch_fs.rs  ticket.rs  types.rs  version.rs
crates/hac/src/crypto/: keyset.rs  mod.rs
crates/hac/src/filesystem/: merge_filesystem.rs  mod.rs
crates/hac/src/formats/: cnmt.rs  mod.rs  nacp.rs  ticket.rs
crates/hac/src/formats/cnmt/: mod.rs  patch_meta_extended_data.rs
crates/hac/src/formats/nca/: contents.rs  crypt_storage.rs  filesystem.rs  mod.rs  structs.rs
crates/hac/src/formats/nca/ncz/: mod.rs  streaming_zstd_storage.rs
crates/hac/src/formats/nca/verification_storage/: integrity_verification_level_storage.rs  mod.rs
crates/hac/src/formats/ncz/: mod.rs  streaming_zstd_storage.rs
crates/hac/src/formats/pfs/: mod.rs  open_file.rs  structs.rs
crates/hac/src/formats/romfs/: dictionary.rs  mod.rs  structs.rs  tables.rs
crates/hac/src/fs/: cnmt.rs  filesystem.rs  mod.rs
crates/hac/src/fs/nca/: crypt_storage.rs  filesystem.rs  mod.rs  structs.rs  verification_storage.rs
crates/hac/src/fs/nca/verification_storage/: integrity_verification_level_storage.rs  mod.rs
crates/hac/src/fs/pfs/: mod.rs
crates/hac/src/fs/romfs/: dictionary.rs  mod.rs  structs.rs  tables.rs
crates/hac/src/fs/storage/: block_adapter_storage.rs  block_slice_storage.rs  either_storage.rs  io_storage.rs  linear_adapter_storage.rs  mod.rs  shared_storage.rs  slice_storage.rs  storage_io.rs  vec_storage.rs
crates/hac/src/fs/storage/block_transform_storage/: block_transforms.rs  mod.rs
crates/hac/src/storage/: block_adapter_storage.rs  block_cache_storage.rs  block_slice_storage.rs  concat_storage.rs  deny_storage.rs  either_storage.rs  io_storage.rs  linear_adapter_storage.rs  mod.rs  shared_storage.rs  slice_storage.rs  storage_io.rs  vec_storage.rs
crates/hac/src/storage/block_transform_storage/: block_transforms.rs  mod.rs
crates/hac/src/switch_fs/: application_set.rs  mod.rs  nca_set.rs  tickets.rs  title_set.rs
crates/hac/src/switch_fs/content_set/: mod.rs  program.rs
