[package]
name = "hac-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hac = { path = "../hac" }
clap = "4.0.32"
itertools = "0.10.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }