[package]
name = "hac-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hac = { path = "../hac" }
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
walkdir = "2.3.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
regex = "1.7.1"
once_cell = "1.17.0"
camino = "1.1.2"