[package]
name = "hac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rust-ini = "0.18.0"
snafu = { version = "0.7.4", features = [] }
serde = { version = "1.0.152", features = ["derive"] }
dirs-next = "2.0.0"
binrw = "0.10.0"

cipher = "0.4.3"
aes = "0.8.2"
ctr = "0.9.2"
xts-mode = "0.5.1"

digest = "0.10.6"
sha2 = "0.10.6"